cambio imagenes, coloco textos, doy formatos a textos

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
   object-position: 80% 30%;
 }
 
+.titulosKarrusel {
+  display: inline-block;
+}
+
 /* para dispositivos grandes */
 @media (width >= 992px) {
   .carruselPpalImg {
