cambio estilo de letra a Open Sans

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+body {
+  font-family: "Open Sans", sans-serif;
+  font-variation-settings: "wght" 300, "ital" 1, "opsz" 16;
+}
+
 .carruselPpalImg {
   height: 350px;
   object-fit: cover;
