armo una grilla con flexbox, coloco imagen y doy estilo

--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,18 @@
-body{
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   font-family: "Open Sans", sans-serif;
   font-variation-settings: "wght" 300, "ital" 1, "opsz" 16;
 }
 
 /* karrusel */
-main{
-    flex-grow: 1;
+main {
+  flex-grow: 1;
 }
 
-.logo{
-  font-family: 'Exo', sans-serif;
+.logo {
+  font-family: "Exo", sans-serif;
   font-weight: 300;
   font-style: italic;
 }
@@ -45,6 +45,14 @@ main{
 .alineaBotonGrilla {
   display: flex;
   flex-direction: column;
+}
+
+/* HELADERAS Y CELULARES */
+.padregrilla {
+  display: grid;
+  grid-template-columns: 70% 30%;
+}
+.hijoimagen {
 }
 
 /* para dispositivos grandes */
