coloco el boton en seccion heladeras, le doy estilo

--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,10 @@ main {
 
 /* HELADERAS Y CELULARES */
 
+.botonHela {
+  background-color: #5499c7;
+}
+
 /* para dispositivos grandes */
 @media (width >= 992px) {
   .carruselPpalImg {
