termino de acomodar las 2 cards, doy estilo a la leyenda y pongo fondo de la misma

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,22 @@ main {
   background-color: #5499c7;
 }
 
+/* Publicidades */
+.publiPadre {
+  position: relative;
+}
+
+.publiHijo {
+  position: absolute;
+}
+
+.leyendaTarjeta {
+  width: fit-content;
+
+  top: 80%;
+  font-size: x-large;
+}
+
 /* para dispositivos grandes */
 @media (width >= 992px) {
   .carruselPpalImg {
