pongo video, hago grilla, coloco primera foto con su descripcion

--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,11 @@ main {
   font-size: x-large;
 }
 
+/* Pagina detalle de cotegorias */
+.alturaVideo {
+  height: 400px;
+}
+
 /* para dispositivos grandes */
 @media (width >= 992px) {
   .carruselPpalImg {
