creacion pagina de error

--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,10 @@ main {
   font-size: x-large;
 }
 
+.botonerror {
+  background-color: #5499c7;
+}
+
 /* para dispositivos grandes */
 @media (width >= 992px) {
   .carruselPpalImg {
