completo las fotos de todas las grillas

--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,12 @@ main {
   font-size: small;
 }
 
+/* Pagina heladeras */
+.alturaHela {
+  height: 500px;
+  object-fit: cover;
+}
+
 /* .colorFondoGrillaCel {
   background-color: #eaf2f8;
   overflow: hidden;
