--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,10 @@ main {
   background-color: #5499c7;
 }
 
+.alturaVideo {
+  height: 400px;
+}
+
 /* Publicidades */
 .publiPadre {
   position: relative;
