--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,35 @@ body {
   height: 55px;
 }
 
+/*productos1*/
+.tamañocard{
+  max-width: 1300px;
+  width: 100%;
+}
+
+/*nosotros*/
+.nosotros{
+  width: 18rem;
+  height: 100%;
+  background-color: transparent;
+  border: none;
+}
+
+.imgnosotros{
+  width: 300px;
+  height: 300px;
+  overflow: hidden;
+  border-radius: 50%;
+  margin: 0 auto;
+  border: 5px solid white;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease;
+}
+
+.imgnosotros:hover{
+  transform: scale(1.1);
+}
+
 /* karrusel */
 main {
   flex-grow: 1;
